syntax = "proto3";

package pb;
import "model/movie.proto";

option go_package = "github.com/lancer2672/DandelionServer_Go/pb/request";

message CreateMovieRequest {
    string title = 1;
    int32 duration = 2;
    string description = 3;
    repeated string actor_avatars = 4;
    string trailer = 5;
    string file_path = 6;
    string thumbnail = 7;
    int32 views = 8;
    int32 stars = 9;
}

message GetListMoviesRequest {
    int64 limit = 1;
    int64 offset = 2;
}

message GetMovieRequest {
    int32 id = 1;
}
message GetListMoviesResponse {
    repeated Movie data = 1;
}
message GetMoviesByGenreResponse {
    repeated Movie data = 1;
}

message GetMoviesBySerieResponse {
    repeated Movie data = 1;
}
message GetRecentMoviesResponse {
    repeated Movie data = 1;
}

message GetRecentMoviesRequest {
    int64 limit = 1;
    int64 offset = 2;
}

message SearchMoviesRequest {
    string column_1 = 1;
    int64 limit = 2;
    int64 offset = 3;
}
message SearchMoviesResponse {
    repeated Movie data = 1;
}

message GetMoviesByGenreRequest {
    int32 genre_id = 1;
    int64 limit = 2;
    int64 offset = 3;
}

message GetMoviesBySerieRequest {
    int32 id = 1;
    int64 limit = 2;
    int64 offset = 3;
}

message GetWatchingMoviesRequest {
    int32 user_id = 1;
    int64 limit = 2;
    int64 offset = 3;
}

message GetWatchingMoviesResponse {
    repeated WatchingMovie data = 1;
}
message UpdateMovieRequest {
    string title = 1;
    string description = 2;
    string file_path = 3;
    string thumbnail = 4;
    int32 id = 5;
}

message UpdateMovieResponse {
    Movie movie = 1;
}
